# windbg-mcp

./: .gitignore  .markdownlint.jsonc  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
docs/: crash-dump-walkthrough.md  ttd-walkthrough.md
skills/windbg-debugging/: SKILL.md  crash-dump.md  live-and-kernel.md  setup.md  ttd.md
src/: engine.rs  main.rs  server.rs  ttd.rs
