[package]
name = "windbg-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
win-kexp = { path = "../win-kexp" }
rmcp = { version = "1", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
